# search-scrape

./: .clinerules  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  HISTORY_FEATURE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PHASE1_SUMMARY.md  PHASE2_QUICKREF.md  PHASE2_SUMMARY.md  README.md  REAL_OUTPUT_DEMO.md  REVIEWER_RESPONSE.md  TESTING_HISTORY.md  TESTING_REPORT.md  TESTING_SUMMARY.md  VSCODE_SETUP.md  WINDOWS_TEST_REPORT_2026-02-16.json  cortex-scout.json  demo_http_api.py  demo_real_usage.py  demo_real_usage.sh  docker-compose-legacy.yml  docker-compose-local.yml  docker-compose.yml  ip.txt  ip.txt.bak  local_release.sh  proxy_source.json  server.json  shadowcrawl.json  smithery.config-schema.json  smithery.yaml  test_direct.sh  test_integration.sh  test_mcp_tools.py  tools_metadata.json  vscode_mcp_config.json
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: ci.yml  docker-build.yml  publish-mcp-registry.yml  registry-sync.yml  release.yml
.well-known/: glama.json
ci/: smoke.py  validate.py
docs/: DOCKER_DEPLOYMENT.md  DOCKER_SETUP_COMPLETE.md  FINAL_MCP_TEST_REPORT.json  FINAL_MCP_TEST_REPORT.md  GA_REFACTOR_READINESS_2026-02-12.md  HISTORY_FEATURE.md  IDE_SETUP.md  NON_ROBOT_SEARCH.md  PROXY_MANAGER_IMPLEMENTATION.md  QUICK_REFERENCE.txt  README_UPDATES.md  RELEASE_NOTES_v1.0.0.md  RELEASE_READINESS_2026-02-12.json  SAFETY_KILL_SWITCH.md  SAFETY_KILL_SWITCH_SUMMARY.md  SEARXNG_TUNING.md  TESTING_SUMMARY.md  TEST_REPORTS_INDEX.md  UBUNTU_DESKTOP.md  VSCODE_SETUP.md  WINDOWS_DESKTOP.md  WINDOWS_SETUP.md  run_release_validation.py  ubuntu_setup.md  window_setup.md
docs/examples/: proxy_source.example.json
mcp-server/: Cargo.toml
mcp-server/.cargo/: config.toml
mcp-server/src/: antibot.rs  batch_scrape.rs  crawl.rs  extract.rs  history.rs  lib.rs  main.rs  mcp.rs  query_rewriter.rs  rust_scraper.rs  scrape.rs  search.rs  stdio_service.rs  types.rs
mcp-server/src/cdp/: state.rs
mcp-server/src/core/: app_state.rs  config.rs  content_quality.rs  mod.rs  tools_registry.rs  types.rs
mcp-server/src/features/: antibot.rs  auth_registry.rs  history.rs  host_guard.rs  mod.rs  non_robot_search.rs  proxy_grabber.rs  proxy_manager.rs  session_store.rs  visual_scout.rs
mcp-server/src/mcp/: http.rs  mod.rs  stdio.rs  timeout.rs  tooling.rs
mcp-server/src/mcp/handlers/: automate.rs  common.rs  crawl_website.rs  deep_research.rs  extract_structured.rs  fetch_then_extract.rs  human_auth_session.rs  mod.rs  non_robot_search.rs  proxy_manager.rs  research_history.rs  scrape_batch.rs  scrape_url.rs  search_structured.rs  search_web.rs  visual_scout.rs
mcp-server/src/nlp/: mod.rs  query_rewriter.rs  rerank.rs  semantic_shave.rs
mcp-server/src/scraping/: browser_manager.rs  mod.rs
mcp-server/src/scraping/rust_scraper/: browserless.rs  cdp.rs  clean.rs  jsonld.rs  metadata.rs  mod.rs  parse.rs  quality.rs  stealth.rs
mcp-server/src/setup/: mod.rs
mcp-server/src/setup/os/: linux.rs  macos.rs  mod.rs  windows.rs
mcp-server/src/tools/: batch_scrape.rs  crawl.rs  deep_research.rs  extract.rs  mod.rs  scrape.rs  search.rs
mcp-server/src/tools/search/: mod.rs  service.rs
mcp-server/src/tools/search/engines/: bing.rs  brave.rs  duckduckgo.rs  google.rs  mod.rs
mcp-server/tests/: boss_level_test.rs  debug_test.rs  integration_test.rs  non_robot_search_manual.rs  non_robot_search_sandbox.rs  tools_registry_test.rs  vector_search_smoke.rs
proof/: README.md  airbnb_evidence.json  airbnb_raw_snippet.txt  amazon_evidence.json  amazon_raw_snippet.txt  deep_research_antibot_evidence.json  deep_research_rust_mcp_evidence.json  linkedin_evidence.json  linkedin_raw_snippet.txt  nowsecure_evidence.json  nowsecure_raw_snippet.txt  playwright_parity_trace.json  ticketmaster_evidence.json  ticketmaster_raw_snippet.txt  upwork_evidence.json  upwork_raw_snippet.txt
publish/ci/: smoke_deep_research.py  smoke_mcp.py
sample-results/: README.md  crawl_website_json.txt  extract_structured_json.txt  history.txt  proxy_manager_json.txt  research_history_json.txt  scrape_batch_json.txt  scrape_url.txt  scrape_url_json.txt  search_structured_json.txt  search_web.txt
scripts/: release.sh
searxng/: settings.yml
