[package]
name = "shadowcrawl"
version = "1.1.0"
edition = "2021"
description = "The Sovereign Stealth Intelligence Engine for AI Agents - A self-hosted, private alternative to Firecrawl with universal anti-bot bypass and semantic research memory"
repository = "https://github.com/DevsHero/ShadowCrawl"
license = "MIT"

[lib]
name = "shadowcrawl"
path = "src/lib.rs"

[[bin]]
name = "shadowcrawl"
path = "src/main.rs"

[[bin]]
name = "shadowcrawl-mcp"
path = "src/bin/mcp-stdio.rs"

[dependencies]
# Core Async & Web
tokio = { version = "1.49", features = ["full"] }         
axum = "0.8"                                             
tower = "0.5"                                             
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.13", features = ["json", "gzip", "brotli", "deflate", "socks"] }

# Serialization & Data
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
url = "2.5"
uuid = { version = "1.20", features = ["v4"] }
chrono = { version = "0.4.43", features = ["serde"] }
regex = "1.12"
percent-encoding = "2.3"
schemars = "1.2"

# Intelligence & Search
qdrant-client = { version = "1.16", features = ["serde"] }
fastembed = "4.9"
rmcp = { version = "0.15", features = ["server", "transport-io"] }
moka = { version = "0.12", features = ["future"] }

# HTML Processing
scraper = "0.25"
readability = "0.3"
html2md = "0.2"
select = "0.6"
whatlang = "0.18"

# Utilities & Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
futures = "0.3"
backoff = { version = "0.4", features = ["tokio"] }
rand = "0.10"
chromiumoxide = "0.5"

[dev-dependencies]
tokio-test = "0.4"
