[package]
name = "cortex-scout"
version = "3.1.0"
edition = "2021"
description = "God-Tier stealth intelligence engine for AI agents — zero-dependency parallel meta-search (Google/Bing/DDG/Brave), universal anti-bot bypass, native Chromium CDP (zero-Docker standalone), semantic research memory, and HITL nuclear option. Self-hosted, 100% private, MCP-native."
repository = "https://github.com/cortex-works/cortex-scout"
license = "MIT"

[lib]
name = "cortex_scout"
path = "src/lib.rs"

[[bin]]
name = "cortex-scout"
path = "src/main.rs"

[[bin]]
name = "cortex-scout-mcp"
path = "src/bin/mcp-stdio.rs"

# ── Dev / benchmark tools (auto-discovered by Cargo; not shipped in releases)
[[bin]]
name = "search-compare"
path = "src/bin/search-compare.rs"
required-features = ["dev-tools"]

[[bin]]
name = "shadow-sandbox"
path = "src/bin/shadow-sandbox.rs"
required-features = ["dev-tools"]

[[bin]]
name = "deep-research-test"
path = "src/bin/deep-research-test.rs"
required-features = ["dev-tools"]

[[bin]]
name = "proxy-refill-test"
path = "src/bin/proxy-refill-test.rs"
required-features = ["dev-tools"]

[dependencies]
# Core Async & Web
tokio = { version = "1.49", features = ["full"] }         
axum = "0.8"                                             
tower = "0.5"                                             
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.13", features = ["json", "gzip", "brotli", "deflate", "socks"] }
async-trait = "0.1"

# Serialization & Data
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
url = "2.5"
uuid = { version = "1.20", features = ["v4"] }
chrono = { version = "0.4.43", features = ["serde"] }
regex = "1.12"
percent-encoding = "2.3"
base64 = "0.22"
schemars = "1.2"

# Intelligence & Search
model2vec-rs = "0.1.4"
lancedb = "0.26"
arrow-array = "57"
arrow-schema = "57"
rmcp = { version = "0.15", features = ["server", "transport-io"] }
moka = { version = "0.12", features = ["future"] }

# HTML Processing
scraper = "0.25"
readability = "0.3"
html2md = "0.2"
select = "0.6"
whatlang = "0.18"

# Utilities & Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
futures = "0.3"
backoff = { version = "0.4", features = ["tokio"] }
rand = "0.10"
aho-corasick = "1.1"
chromiumoxide = "0.8"

# Setup / preflight
dirs = "6.0"
which = "8.0"
rfd = { version = "0.15", optional = true, default-features = false, features = ["xdg-portal", "tokio"] }

# --- Optional: non_robot_search (visible browser + HITL) ---
rodio = { version = "0.21", optional = true }
notify-rust = { version = "4.11", optional = true }
crossterm = { version = "0.29", optional = true }
atty = { version = "0.2", optional = true }
rdev = { version = "0.5.3", optional = true }
sysinfo = { version = "0.35", optional = true, default-features = false, features = ["system"] }

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = "0.2"
core-foundation-sys = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
# Prefer vendored OpenSSL on Linux so binaries are less dependent on system OpenSSL.
openssl-sys = { version = "0.9", features = ["vendored"] }

[features]
# Keep default builds lean; enable HITL "nuclear option" explicitly.
# deep-research is ON by default — disable with DEEP_RESEARCH_ENABLED=0 (runtime)
# or strip entirely at build time with: cargo build --no-default-features
default = ["deep-research"]

# Multi-hop research pipeline (search + scrape + semantic-filter + synthesis).
# No extra Cargo deps — synthesis is via OpenAI-compatible API (set OPENAI_BASE_URL
# to point at Ollama / LM Studio for fully local, zero-cost inference).
deep-research = []

non_robot_search = ["dep:rodio", "dep:notify-rust", "dep:crossterm", "dep:atty", "dep:rdev", "dep:sysinfo", "dep:rfd"]

# Dev-only helper binaries (not shipped, not built by default).
dev-tools = []

[dev-dependencies]
tokio-test = "0.4"
